Changes after fresh install

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,21 +4,15 @@ env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bi
 env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
 env = JAVA_HOME, /usr/lib/jvm/java-20-openjdk:$JAVA_HOME
 
-$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling-star.jpg"
-$w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/reflection.jpg"
-$w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling.jpg"
-$w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/apollo.jpg"
-$w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/woman.jpg"
-
-
-exec-once = hyprpaper
-exec-once = dunst
+exec-once = swww init
+exec-once = mako
+exec-once = wlsunset
 exec-once = ~/shell-scripts/xdph.sh
 exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = [workspace special:browse] firefox --private-window
+exec-once = [workspace special:browse] firefox-developer-edition --private-window
 exec-once = [workspace special:spot] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
 exec-once = [workspace special:term] alacritty
 exec-once = [workspace special:mail] thunderbird
@@ -27,7 +21,7 @@ exec-once = [workspace special:calc] speedcrunch
 exec-once = [workspace special:doom] emacs
 exec-once = [workspace special:pomodoro] pomotroid --disable-gpu-sandbox
 exec-once = [workspace special:anki] anki
-
+exec-once = $HOME/shell-scripts/change-wallpaper.sh
 
 input {
 	kb_layout = us,us
@@ -62,11 +56,11 @@ decoration {
 	active_opacity = 1.0
 	inactive_opacity = 1.0
 
-	blur = true
-	blur_size = 8
-	blur_passes = 2
-	blur_ignore_opacity = true
-	blur_new_optimizations = true
+	#blur = true
+	#blur_size = 8
+	#blur_passes = 2
+	#blur_ignore_opacity = true
+	#blur_new_optimizations = true
 
 	drop_shadow = true
 	shadow_ignore_window = true
@@ -135,7 +129,7 @@ $mainMod = ALT
 
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod_SHIFT, RETURN, exec, kitty
-bind = $mainMod, E, exec, nemo
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, F, exec, vivaldi-stable --profile-directory="Default"
 bind = $mainMod SHIFT, F, exec, vivaldi-stable --profile-directory="Profile 1"
 bind = $mainMod, D, exec, emacsclient -c -a 'emacs'
@@ -143,7 +137,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
-bind = $mainMod, P, exec, $HOME/shell-scripts/pass.sh
+bind = $mainMod SHIFT, P, exec, $HOME/shell-scripts/pass.sh
 
 bind = , XF86MonBrightnessUp, exec,light -A 5
 bind = , XF86MonBrightnessDown, exec, light -U 5
@@ -152,6 +146,8 @@ bind = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
 bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
+bind = , XF86AudioNext, exec, $HOME/shell-scripts/change-wallpaper.sh
+# bind = $mainMod SHIFT Z, focusmonitor 
 
 bind = $mainMod_SHIFT, C, exec, . $HOME/shell-scripts/close.sh
 bind = $mainMod_SHIFT, T, togglefloating,
@@ -189,7 +185,7 @@ bind = $mainMod_SHIFT, L, layoutmsg, swapwithmaster
 bind = $mainMod, SPACE, layoutmsg, orientationnext
 bind = $mainMod_SHIFT, SPACE, layoutmsg, orientationprev
 
-# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
 # Move focus with mainMod + vim-arrow keys
