--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
 monitor=,1920x1080@60,auto,1
 
-env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bin:$HOME/.cargo/bin:$PATH
-env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
-env = JAVA_HOME, /usr/lib/jvm/java-20-openjdk:$JAVA_HOME
+env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-17-openjdk/bin:$HOME/.dev/node/bin:$HOME/.cargo/bin:$PATH
+env = LD_LIBRARY_PATH, /usr/lib/jvm/java-17-openjdk/lib:$LD_LIBRARY_PATH
+env = JAVA_HOME, /usr/lib/jvm/java-17-openjdk:$JAVA_HOME
 
 exec-once = swww init
 exec-once = mako
@@ -12,16 +12,19 @@ exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = [workspace special:browse] firefox-developer-edition --private-window
+exec-once = [workspace special:browse] vivaldi-stable --incognito
 exec-once = [workspace special:spot] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
 exec-once = [workspace special:term] alacritty
 exec-once = [workspace special:mail] thunderbird
-exec-once = [workspace special:whats] whatsapp-for-linux
+exec-once = [workspace special:whats] firefox-developer-edition web.whatsapp.com
 exec-once = [workspace special:calc] speedcrunch
 exec-once = [workspace special:doom] emacs
 exec-once = [workspace special:pomodoro] pomotroid --disable-gpu-sandbox
 exec-once = [workspace special:anki] anki
 exec-once = $HOME/shell-scripts/change-wallpaper.sh
+exec-once = sway-audio-idle-inhibit
+exec-once = wal -R
+exec-once = $HOME/shell-scripts/sleep.sh
 
 input {
 	kb_layout = us,us
@@ -41,67 +44,69 @@ input {
 }
 
 general {
-	gaps_in = 3
-	gaps_out = 10
-	border_size = 2
+	gaps_in = 15
+	gaps_out = 30
+	border_size = 4
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	col.inactive_border = rgba(595959aa)
 	layout = dwindle
 }
 
 decoration {
-	rounding = 8
-	multisample_edges = true
-
+	rounding = 15
 	active_opacity = 1.0
-	inactive_opacity = 1.0
+  	inactive_opacity = 1.0
+	blur {
+		enabled = true
+		size = 10 
+		passes = 3
+		new_optimizations = true
+		xray = false
+		ignore_opacity = true
+  	}
 
-	#blur = true
-	#blur_size = 8
-	#blur_passes = 2
-	#blur_ignore_opacity = true
-	#blur_new_optimizations = true
 
 	drop_shadow = true
 	shadow_ignore_window = true
-	shadow_offset = 2 2
-	shadow_range = 4
-	shadow_render_power = 2
+	shadow_offset = 1 2
+	shadow_range = 10
+	shadow_render_power = 5
 	col.shadow = 0x66000000
 
 	blurls = gtk-layer-shell
-	blurls = waybar
 	blurls = lockscreen
 }
 
 animations {
 	enabled = yes
 
-	bezier = overshot, 0.05, 0.9, 0.1, 1.05
-	bezier = smoothOut, 0.36, 0, 0.66, -0.56
-	bezier = smoothIn, 0.25, 1, 0.5, 1
+	bezier = wind, 0.05, 0.9, 0.1, 1.05
+	bezier = winIn, 0.1, 1.1, 0.1, 1.1
+	bezier = winOut, 0.3, -0.3, 0, 1
+	bezier = liner, 1, 1, 1, 1
 
-	animation = windows, 1, 5, overshot, slide
-	animation = windowsOut, 1, 4, smoothOut, slide
-	animation = windowsMove, 1, 4, default
-	animation = border, 1, 10, default
-	animation = fade, 1, 10, smoothIn
-	animation = fadeDim, 1, 10, smoothIn
-	animation = workspaces, 1, 6, default
+	animation = windows, 1, 6, wind, slide
+	animation = windowsIn, 1, 6, winIn, slide
+	animation = windowsOut, 1, 5, winOut, slide
+	animation = windowsMove, 1, 5, wind, slide
+	animation = border, 1, 1, liner
+	animation = borderangle, 1, 30, liner, loop
+	animation = fade, 1, 10, default
+	animation = workspaces, 1, 5, wind
 }
 
 dwindle {
 	no_gaps_when_only = false
-	pseudotile = yes 
-	preserve_split = yes
-	force_split = 2
+	pseudotile = true 
+	preserve_split = true
+	force_split = 3
 }
 
 master {
 	new_is_master = false 
-	new_on_top = false
+	new_on_top = true
 	no_gaps_when_only = false
-	always_center_master = true
+	always_center_master = false
 	mfact = 0.50
 }
 
@@ -117,6 +122,7 @@ device:epic mouse V1 {
 misc {
 	enable_swallow = true
 	swallow_exception_regex = '^(mpv)$'
+	new_window_takes_over_fullscreen = 2
 }
 
 windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
@@ -147,9 +153,10 @@ bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
 bind = , XF86AudioNext, exec, $HOME/shell-scripts/change-wallpaper.sh
-# bind = $mainMod SHIFT Z, focusmonitor 
+bind = , XF86Presentation,exec, $HOME/shell-scripts/change-wallpaper.sh 
 
 bind = $mainMod_SHIFT, C, exec, . $HOME/shell-scripts/close.sh
+bind = $mainMod_CTRL, M, movewindow, <monitor_name>
 bind = $mainMod_SHIFT, T, togglefloating,
 
 bind = $mainMod, Q, exec, wlogout
