Add silent modifier for hyprland special workspaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,15 +12,15 @@ exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = [workspace special:browse] vivaldi-stable --incognito
-exec-once = [workspace special:spot] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
-exec-once = [workspace special:term] alacritty
-exec-once = [workspace special:mail] thunderbird
-exec-once = [workspace special:whats] firefox-developer-edition web.whatsapp.com
-exec-once = [workspace special:calc] speedcrunch
-exec-once = [workspace special:doom] emacs
-exec-once = [workspace special:pomodoro] pomotroid --disable-gpu-sandbox
-exec-once = [workspace special:anki] anki
+exec-once = [workspace special:browse silent] vivaldi-stable --incognito
+exec-once = [workspace special:spot silent] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
+exec-once = [workspace special:term silent] alacritty
+exec-once = [workspace special:mail silent] thunderbird
+exec-once = [workspace special:whats silent] firefox-developer-edition web.whatsapp.com
+exec-once = [workspace special:calc silent] speedcrunch
+exec-once = [workspace special:doom silent] emacs
+exec-once = [workspace special:pomodoro silent] pomotroid --disable-gpu-sandbox
+exec-once = [workspace special:anki silent] anki
 exec-once = $HOME/shell-scripts/change-wallpaper.sh
 exec-once = sway-audio-idle-inhibit
 exec-once = wal -R
