Add window rule

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -125,11 +125,8 @@ misc {
 	new_window_takes_over_fullscreen = 2
 }
 
-windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
-windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
-windowrulev2 = float, title:^(.*Agent)$
-windowrulev2 = float, title:^(.*Properties)$
-windowrulev2 = tile,  title:^(.*Logisim-evolution.*)$
+windowrulev2 = workspace 3 silent, class:^(vivaldi-stable)$
+windowrulev2 = workspace 2 silent, class:^(VSCodium)$
 
 $mainMod = ALT
 
@@ -156,7 +153,7 @@ bind = , XF86AudioNext, exec, $HOME/shell-scripts/change-wallpaper.sh
 bind = , XF86Presentation,exec, $HOME/shell-scripts/change-wallpaper.sh 
 
 bind = $mainMod_SHIFT, C, exec, . $HOME/shell-scripts/close.sh
-bind = $mainMod_CTRL, M, movewindow, <monitor_name>
+bind = $mainMod_CTRL, Z, movewindow, "HDMI-A-1"
 bind = $mainMod_SHIFT, T, togglefloating,
 
 bind = $mainMod, Q, exec, wlogout
