Add zathura keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -139,6 +139,7 @@ bind = $mainMod, D, exec, emacsclient -c -a 'emacs'
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
+bind = $mainMod, Z, exec, zathura
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
 bind = $mainMod SHIFT, P, exec, $HOME/shell-scripts/pass.sh
 
