Remove silent for workspace rule

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -125,8 +125,8 @@ misc {
 	new_window_takes_over_fullscreen = 2
 }
 
-windowrulev2 = workspace 3 silent, class:^(vivaldi-stable)$
-windowrulev2 = workspace 2 silent, class:^(VSCodium)$
+windowrulev2 = workspace 3, class:^(vivaldi-stable)$
+windowrulev2 = workspace 2, class:^(VSCodium)$
 
 $mainMod = ALT
 
