--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,7 @@
 monitor=,1920x1080@60,auto,1
 
-env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-17-openjdk/bin:$HOME/.dev/node/bin:$HOME/.cargo/bin:$PATH
-env = LD_LIBRARY_PATH, /usr/lib/jvm/java-17-openjdk/lib:$LD_LIBRARY_PATH
-env = JAVA_HOME, /usr/lib/jvm/java-17-openjdk:$JAVA_HOME
+env = PATH, $HOME/.local/bin:$PATH
+env = MOZ_ENABLE_WAYLAND=1
 
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -19,7 +18,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec = hyprshade auto
 
 # exec-once = [workspace special:browse silent] vivaldi-stable --incognito
-exec-once = [workspace special:spot silent] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
+exec-once = [workspace special:spot silent] LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 exec-once = [workspace special:term silent] alacritty
 exec-once = [workspace special:mail silent] thunderbird
 exec-once = [workspace special:whats silent] firefox-developer-edition web.whatsapp.com
@@ -120,9 +119,9 @@ gestures {
 	workspace_swipe_forever = true
 }
 
-device:epic mouse V1 {
-       sensitivity = -0.5
-}
+#device:epic mouse V1 {
+#       sensitivity = -0.5
+#}
 
 misc {
 	enable_swallow = true
@@ -155,6 +154,7 @@ bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
 bind = , XF86AudioNext, exec, $HOME/shell-scripts/change-wallpaper.sh
+bind = , XF86AudioPrev, exec, hyprshade toggle
 bind = , XF86Presentation,exec, $HOME/shell-scripts/change-wallpaper.sh 
 
 bind = $mainMod_SHIFT, C, killactive
