--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment
 
 exec-once = $HOME/.local/share/scripts/portal.sh
+exec-once = eww daemon
+exec-once = eww open bar
 exec-once = swww init
 exec-once = mako
 exec-once = udiskie
@@ -48,9 +50,9 @@ input {
 }
 
 general {
-	gaps_in = 15
-	gaps_out = 30
-	border_size = 4
+	gaps_in = 5
+	gaps_out = 15
+	border_size = 5
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	col.inactive_border = rgba(595959aa)
 	layout = dwindle
