Add eww support

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,6 +10,7 @@ exec-once = systemctl --user import-environment
 exec-once = $HOME/.local/share/scripts/portal.sh
 exec-once = eww daemon
 exec-once = eww open bar
+exec-once = $HOME/.config/eww/scripts/workspaces.py
 exec-once = swww init
 exec-once = mako
 exec-once = udiskie
@@ -133,6 +134,7 @@ misc {
 
 windowrulev2 = workspace 3, class:^(vivaldi-stable)$
 windowrulev2 = workspace 2, class:^(VSCodium)$
+windowrulev2 = float, title:(Connect to the Internet) 
 
 $mainMod = ALT
 
@@ -207,24 +209,19 @@ bind = $mainMod, J, cyclenext, prev
 
 # Switch workspace keys
 bind = $mainMod, parenleft, workspace, 1
-bind = $mainMod, parenleft, exec, $w1
-bind = $mainMod, parenleft, exec, wal -i ~/Pictures/falling-star.jpg
+bind = $mainMod, parenleft, exec, ~/.config/eww/scripts/workspaces.py
 
 bind = $mainMod, parenright, workspace, 2
-bind = $mainMod, parenright, exec, $w2
-bind = $mainMod, parenright, exec, wal -i ~/Pictures/reflection.jpg
+bind = $mainMod, parenright, exec, ~/.config/eww/scripts/workspaces.py
 
 bind = $mainMod, braceright, workspace, 3
-bind = $mainMod, braceright, exec, $w3
-bind = $mainMod, braceright, exec, wal -i ~/Pictures/falling.jpg
+bind = $mainMod, braceright, exec, ~/.config/eww/scripts/workspaces.py
 
 bind = $mainMod, plus, workspace, 4
-bind = $mainMod, plus, exec, $w4
-bind = $mainMod, plus, exec, wal -i ~/Pictures/apollo.jpg
+bind = $mainMod, plus, exec, ~/.config/eww/scripts/workspaces.py
 
 bind = $mainMod, braceleft, workspace, 5
-bind = $mainMod, braceleft, exec, $w5
-bind = $mainMod, braceleft, exec, wal -i ~/Pictures/woman.jpg
+bind = $mainMod, braceleft, exec, ~/.config/eww/scripts/workspaces.py
 
 bind = $mainMod, bracketright, workspace, 6
 bind = $mainMod, bracketleft, workspace, 7
